--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="frame.css">
 	</head>
 	<body class="home">
 		<header>
@@ -56,48 +57,45 @@
             </div>
 		</header>
     <main>
+        <div >
+        <iframe src="isis.html" name="janela" id="frame">
+
+        </iframe>
+        </div>
         <ul class="team">
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Pesquisadora e </p>
+
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Marketing e Pesquisador</p>
+
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Desenvolvedor Web
+ 
                 </p>
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Pesquisadora e </p>
+
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Marketing e Pesquisador</p>
+ 
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Desenvolvedor Web
+ 
                 </p>
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Pesquisadora e </p>
+ 
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
-                <p class="nome">nome</p>
-                <p class="descricao">Marketing e Pesquisador</p>
+ 
             </li>
         </ul>
     </main>
