--- a/team.html
+++ b/team.html
@@ -73,8 +73,6 @@
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
- 
-                </p>
             </li>
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
@@ -96,6 +94,12 @@
             <li>
                 <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
  
+            </li>
+            <li>
+                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+            </li>
+            <li>
+                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
             </li>
         </ul>
     </main>
