Adicionando js na pagina times para efeito onmouseover

--- a/team.html
+++ b/team.html
@@ -7,6 +7,109 @@
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="frame.css">
+        <script>
+            function AbrirIsis()
+            {
+                frame = document.getElementById("frame");
+                frame.src="isis.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirVivian()
+            {
+                frame = document.getElementById("frame");
+                frame.src="vivian.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirAndrelaine()
+            {
+                frame = document.getElementById("frame");
+                frame.src="andrelaine.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirEdson()
+            {
+                frame = document.getElementById("frame");
+                frame.src="Edson.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirLucas()
+            {
+                frame = document.getElementById("frame");
+                frame.src="Lucas.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirLucas2()
+            {
+                frame = document.getElementById("frame");
+                frame.src="lucas2.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirRamon()
+            {
+                frame = document.getElementById("frame");
+                frame.src="ramon.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirJuliano()
+            {
+                frame = document.getElementById("frame");
+                frame.src="juliano.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirMonica()
+            {
+                frame = document.getElementById("frame");
+                frame.src="monica.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+            function AbrirFabiana()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fabiana.html"
+            }
+            function Fechar()
+            {
+                frame = document.getElementById("frame");
+                frame.src="fundo.html"
+            }
+        
+        </script>
 	</head>
 	<body class="home">
 		<header>
@@ -57,49 +160,47 @@
             </div>
 		</header>
     <main>
-        <div >
-        <iframe src="isis.html" name="janela" id="frame">
+        <iframe width="500px" height="400px" id="frame">
 
         </iframe>
-        </div>
         <ul class="team">
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirIsis()" onmouseout="Fechar()">
 
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirVivian()" onmouseout="Fechar()">
 
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirLucas()" onmouseout="Fechar()">
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirLucas2()" onmouseout="Fechar()">
 
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirEdson()" onmouseout="Fechar()">
  
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" onmouseout="Fechar()">
  
                 </p>
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirJuliano()" onmouseout="Fechar()">
  
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirRamon()" onmouseout="Fechar()">
  
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirMonica()" onmouseout="Fechar()">
             </li>
             <li>
-                <img src="rosto.jpg" onmouseover="this.src='rosto2.jpg'" onmouseout="this.src='rosto.jpg'">
+                <img src="rosto2.jpg" onmouseover="AbrirFabiana()" onmouseout="Fechar()">
             </li>
         </ul>
     </main>
