transformando a foto do time em clicavel

--- a/team.html
+++ b/team.html
@@ -160,47 +160,59 @@
             </div>
 		</header>
     <main>
-        <iframe width="500px" height="400px" id="frame">
+        <iframe width="500px" height="400px" id="frame" name="janela">
 
         </iframe>
         <ul class="team">
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirIsis()" onmouseout="Fechar()">
-
+                <a href="isis2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirIsis()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirVivian()" onmouseout="Fechar()">
-
+                <a href="vivian2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirVivian()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirLucas()" onmouseout="Fechar()">
+                <a href="lucasii.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirLucas()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirLucas2()" onmouseout="Fechar()">
-
+                <a href="luacas22.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirLucas2()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirEdson()" onmouseout="Fechar()">
- 
+                <a href="edson2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirEdson()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" onmouseout="Fechar()">
- 
-                </p>
+                <a href="andrelaine2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirJuliano()" onmouseout="Fechar()">
- 
+                <a href="juliano2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirJuliano()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirRamon()" onmouseout="Fechar()">
- 
+                <a href="ramon2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirRamon()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirMonica()" onmouseout="Fechar()">
+                <a href="monica2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirMonica()" onmouseout="Fechar()">
+                </a>
             </li>
             <li>
-                <img src="rosto2.jpg" onmouseover="AbrirFabiana()" onmouseout="Fechar()">
+                <a href="monica2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirFabiana()" onmouseout="Fechar()">
+                </a>
             </li>
         </ul>
     </main>
