criando e orientando os botoes para as variações de texto dos integrantes do time

--- a/team.html
+++ b/team.html
@@ -13,100 +13,56 @@
                 frame = document.getElementById("frame");
                 frame.src="isis.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+
             function AbrirVivian()
             {
                 frame = document.getElementById("frame");
                 frame.src="vivian.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+ 
             function AbrirAndrelaine()
             {
                 frame = document.getElementById("frame");
                 frame.src="andrelaine.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+
             function AbrirEdson()
             {
                 frame = document.getElementById("frame");
                 frame.src="Edson.html"
-            }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
             }
             function AbrirLucas()
             {
                 frame = document.getElementById("frame");
                 frame.src="Lucas.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+ 
             function AbrirLucas2()
             {
                 frame = document.getElementById("frame");
                 frame.src="lucas2.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+ 
             function AbrirRamon()
             {
                 frame = document.getElementById("frame");
                 frame.src="ramon.html"
-            }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
             }
             function AbrirJuliano()
             {
                 frame = document.getElementById("frame");
                 frame.src="juliano.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
+ 
             function AbrirMonica()
             {
                 frame = document.getElementById("frame");
                 frame.src="monica.html"
             }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
-            }
             function AbrirFabiana()
             {
                 frame = document.getElementById("frame");
                 frame.src="fabiana.html"
-            }
-            function Fechar()
-            {
-                frame = document.getElementById("frame");
-                frame.src="fundo.html"
             }
         
         </script>
@@ -166,52 +122,52 @@
         <ul class="team">
             <li>
                 <a href="isis2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirIsis()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirIsis()" >
                 </a>
             </li>
             <li>
                 <a href="vivian2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirVivian()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirVivian()">
                 </a>
             </li>
             <li>
                 <a href="lucasii.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirLucas()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirLucas()" >
                 </a>
             </li>
             <li>
                 <a href="luacas22.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirLucas2()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirLucas2()">
                 </a>
             </li>
             <li>
                 <a href="edson2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirEdson()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirEdson()">
                 </a>
             </li>
             <li>
                 <a href="andrelaine2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" >
                 </a>
             </li>
             <li>
                 <a href="juliano2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirJuliano()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirJuliano()">
                 </a>
             </li>
             <li>
                 <a href="ramon2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirRamon()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirRamon()" >
                 </a>
             </li>
             <li>
                 <a href="monica2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirMonica()" onmouseout="Fechar()">
+                    <img src="rosto2.jpg" onmouseover="AbrirMonica()" >
                 </a>
             </li>
             <li>
-                <a href="monica2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirFabiana()" onmouseout="Fechar()">
+                <a href="fabiana2.html" target="janela">
+                    <img src="rosto2.jpg" onmouseover="AbrirFabiana()" >
                 </a>
             </li>
         </ul>
