--- a/index (1).html
+++ b/index (1).html
@@ -9,12 +9,12 @@
 	</head>
 	<body class="home">
 		<div id="load"></div>
-		<script src="/myscript.js"></script>
+		<script src="myscript.js"></script>
         <header>
 			<div class="caixa">
 				<nav>
 					<div id="logomenu" >
-						<img id="imglogomenu" src="/T--Rio_UFRJ_Brazil--logonav.png">
+						<img id="imglogomenu" src="T--Rio_UFRJ_Brazil--logonav.png">
 					</div>
 					<ul class="menu">		
 						<li><a href=""> &nbspHome&nbsp</a></li>
