mudando o nome dos arquivos

--- a/T--Rio_UFRJ_isis2.html
+++ b/T--Rio_UFRJ_isis2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <link rel="stylesheet" href="textoTime.css">
+        <link rel="stylesheet" href="T--Rio_UFRJ_textoTime.css">
 		<meta charset="UTF-8">
 		<title>Team:Rio_UFRJ_Brazil</title>
     </head>
