--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Team:Rio_UFRJ_Brazil</title>
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_index.css">
 	</head>
 	<body class="home">
 		<div id="load"></div>
-		<script src="myscript.js"></script>
+		<script src="T--Rio_UFRJ_myscript.js"></script>
         <header>
 			<div class="caixa">
 				<nav>
@@ -27,7 +27,7 @@
 								<li><a href="#">Proof of concept</a></li>
                             </ul>
                         </li>
-						<li><a href="">&nbspLabwork&nbsp</a>
+						<li><a >&nbspLabwork&nbsp</a>
 							<ul>
 								<li><a href="#">Safety</a></li>
 								<li><a href="#">Experiments</a></li>
@@ -35,15 +35,15 @@
 								<li><a href="#">Results</a></li>
 							</ul>
                         </li>
-						<li><a href=""> &nbspHuman Practices&nbsp</a>
+						<li><a> &nbspHuman Practices&nbsp</a>
 							<ul>
 								<li><a href="#">Human Practices</a></li>
 								<li><a href="#">Entrepreneurship</a></li>
 							</ul>
                         </li>
-						<li><a href="">&nbspTeam&nbsp</a>
+						<li><a>&nbspTeam&nbsp</a>
 							<ul>
-								<li><a href="#">Attributions</a></li>
+								<li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
 								<li><a href="#">Collaboration</a></li>
 								<li><a href="#">Partnership</a></li>
 							</ul>
@@ -61,13 +61,13 @@
 				<div class="social">
 					<ul class="contato">
 						<li>
-							<a href="https://www.facebook.com/osirisrioufrj"><img  src="face.png" width="55px" style="padding-left: 3px;"></a>
+							<a href="https://www.facebook.com/osirisrioufrj"><img  src="T--Rio_UFRJ_face.png" width="55px" style="padding-left: 3px;"></a>
 						</li>
 						<li>
-							<a href="https://www.linkedin.com/company/osirisrioufrj/"><img src="in.png" width="60px" style="padding-right: 0px;padding-bottom: 3px;"></a>
+							<a href="https://www.linkedin.com/company/osirisrioufrj/"><img src="T--Rio_UFRJ_in.png" width="60px" style="padding-right: 0px;padding-bottom: 3px;"></a>
 						</li>
 						<li>
-							<a href="https://www.instagram.com/osirisrioufrj/"><img  src="iconinsta.png" width="52px" style="padding-left: 4px;"></a>
+							<a href="https://www.instagram.com/osirisrioufrj/"><img  src="T--Rio_UFRJ_iconinsta.png" width="52px" style="padding-left: 4px;"></a>
 						</li>
 					</ul>
 				</div>
@@ -91,7 +91,7 @@
 		</main>
 		<div>
 			<footer>
-				<img id="rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
+				<img id="T--Rio_UFRJ_rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
 				
 				<div class="center">	Avenida Carlos Chagas Filho, 373
 					Bloco D, Subsolo, Sala SS-11 
