--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -4,72 +4,72 @@
 		<meta charset="UTF-8">
 		<title>Team:Rio_UFRJ_Brazil</title>
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="frame.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_index.css">
+        <link rel="stylesheet" href="T--Rio_UFRJ_frame.css">
         <script>
             function AbrirIsis()
             {
                 frame = document.getElementById("frame");
-                frame.src="isis.html"
+                frame.src="T--Rio_UFRJ_isis.html"
             }
 
             function AbrirVivian()
             {
                 frame = document.getElementById("frame");
-                frame.src="vivian.html"
+                frame.src="T--Rio_UFRJ_vivian.html"
             }
  
             function AbrirAndrelaine()
             {
                 frame = document.getElementById("frame");
-                frame.src="andrelaine.html"
+                frame.src="T--Rio_UFRJ_andrelaine.html"
             }
 
             function AbrirEdson()
             {
                 frame = document.getElementById("frame");
-                frame.src="Edson.html"
+                frame.src="T--Rio_UFRJ_Edson.html"
             }
             function AbrirLucas()
             {
                 frame = document.getElementById("frame");
-                frame.src="Lucas.html"
+                frame.src="T--Rio_UFRJ_Lucas.html"
             }
  
             function AbrirLucas2()
             {
                 frame = document.getElementById("frame");
-                frame.src="lucas2.html"
+                frame.src="T--Rio_UFRJ_lucas2.html"
             }
  
             function AbrirRamon()
             {
                 frame = document.getElementById("frame");
-                frame.src="ramon.html"
+                frame.src="T--Rio_UFRJ_ramon.html"
             }
             function AbrirJuliano()
             {
                 frame = document.getElementById("frame");
-                frame.src="juliano.html"
+                frame.src="T--Rio_UFRJ_juliano.html"
             }
  
             function AbrirMonica()
             {
                 frame = document.getElementById("frame");
-                frame.src="monica.html"
+                frame.src="T--Rio_UFRJ_monica.html"
             }
             function AbrirFabiana()
             {
                 frame = document.getElementById("frame");
-                frame.src="fabiana.html"
+                frame.src="T--Rio_UFRJ_fabiana.html"
             }
         
         </script>
 	</head>
 	<body class="home">
         <div id="load"></div>
-		<script src="myscript.js">
+		<script src="T--Rio_UFRJ_myscript.js">
         </script>
 		<header>
             <div>
@@ -127,52 +127,52 @@
         </iframe>
         <ul class="team">
             <li>
-                <a href="isis2.html" target="janela">
+                <a href="T--Rio_UFRJ_isis2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirIsis()" >
                 </a>
             </li>
             <li>
-                <a href="vivian2.html" target="janela">
+                <a href="T--Rio_UFRJ_vivian2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirVivian()">
                 </a>
             </li>
             <li>
-                <a href="lucasii.html" target="janela">
+                <a href="T--Rio_UFRJ_lucasii.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirLucas()" >
                 </a>
             </li>
             <li>
-                <a href="luacas22.html" target="janela">
+                <a href="T--Rio_UFRJ_luacas22.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirLucas2()">
                 </a>
             </li>
             <li>
-                <a href="edson2.html" target="janela">
+                <a href="T--Rio_UFRJ_edson2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirEdson()">
                 </a>
             </li>
             <li>
-                <a href="andrelaine2.html" target="janela">
+                <a href="T--Rio_UFRJ_andrelaine2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" >
                 </a>
             </li>
             <li>
-                <a href="juliano2.html" target="janela">
+                <a href="T--Rio_UFRJ_juliano2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirJuliano()">
                 </a>
             </li>
             <li>
-                <a href="ramon2.html" target="janela">
+                <a href="T--Rio_UFRJ_ramon2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirRamon()" >
                 </a>
             </li>
             <li>
-                <a href="monica2.html" target="janela">
+                <a href="T--Rio_UFRJ_monica2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirMonica()" >
                 </a>
             </li>
             <li>
-                <a href="fabiana2.html" target="janela">
+                <a href="T--Rio_UFRJ_fabiana2.html" target="janela">
                     <img src="rosto2.jpg" onmouseover="AbrirFabiana()" >
                 </a>
             </li>
@@ -181,13 +181,13 @@
         <div class="social">
             <ul class="contato">
                 <li>
-                    <a href="https://www.facebook.com/osirisrioufrj"><img  src="face.png" width="55px" style="padding-left: 3px;"></a>
+                    <a href="https://www.facebook.com/osirisrioufrj"><img  src="T--Rio_UFRJ_face.png" width="55px" style="padding-left: 3px;"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/osirisrioufrj/"><img src="in.png" width="60px" style="padding-right: 0px;padding-bottom: 3px;"></a>
+                    <a href="https://www.linkedin.com/company/osirisrioufrj/"><img src="T--Rio_UFRJ_in.png" width="60px" style="padding-right: 0px;padding-bottom: 3px;"></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/osirisrioufrj/"><img  src="iconinsta.png" width="52px" style="padding-left: 4px;"></a>
+                    <a href="https://www.instagram.com/osirisrioufrj/"><img  src="T--Rio_UFRJ_iconinsta.png" width="52px" style="padding-left: 4px;"></a>
                 </li>
             </ul>
         </div>
