--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -78,8 +78,8 @@
 						<img id="imglogomenu" src="T--Rio_UFRJ_Brazil--logonav.png">
 					</div>
                     <ul class="menu">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Project</a>
+                        <li><a href="T--Rio_UFRJ_index.html">Home</a></li>
+                        <li><a>Project</a>
                             <ul>
                                 <li><a href="#">Project Description</a></li>
                                 <li><a href="#">Engineering success</a></li>
@@ -88,7 +88,7 @@
                                 <li><a href="#">Proof of concept</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Labwork</a>
+                        <li><a>Labwork</a>
                             <ul>
                                 <li><a href="#">Safety</a></li>
                                 <li><a href="#">Experiments</a></li>
@@ -96,21 +96,21 @@
                                 <li><a href="#">Results</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Human Practices</a>
+                        <li><a>Human Practices</a>
                             <ul>
                                 <li><a href="#">Human Practices</a></li>
                                 <li><a href="#">Integrated Human Practices</a></li>
                                 <li><a href="#">Entrepreneurship</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Team</a>
+                        <li><a>Team</a>
                             <ul>
-                                <li><a href="#">Attributions</a></li>
+                                <li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
                                 <li><a href="#">Collaboration</a></li>
                                 <li><a href="#">Partnership</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Parts</a>
+                        <li><a>Parts</a>
                             <ul>
                                 <li><a href="#">Contribution</a></li>
                                 <li><a href="#">Project parts</a></li>
