adicionando colaboradores, paginas, icones e iframe

--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -106,7 +106,7 @@
                         <li><a>Team</a>
                             <ul>
                                 <li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
-                                <li><a href="#">Collaboration</a></li>
+                                <li><a href="T--Rio_UFRJ_collaboration.html">Collaboration</a></li>
                                 <li><a href="#">Partnership</a></li>
                             </ul>
                         </li>
