adicionando as configurações certas ao iframe, ajuste de foto e texto

--- a/T--Rio_UFRJ_vivian2.html
+++ b/T--Rio_UFRJ_vivian2.html
@@ -4,9 +4,12 @@
 		<meta charset="UTF-8">
 
 	</head>
+    <iframe src="" frameborder="0">
+        
+    </iframe>
 	<body>
 
-        <img src="rosto.jpg">
+        <img src="teste.jpeg">
 
     </body>
 
