--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -122,7 +122,7 @@
             </div>
 		</header>
     <main>
-        <iframe width="500px" height="400px" id="frame" name="janela">
+        <iframe id="frame" name="janela">
 
         </iframe>
         <ul class="team">
