Tirei a / da imagem do load no css, acertei a imagem do rodapé e mudei o tempo de loading

--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -77,7 +77,7 @@
 		<main>
 			<div class="desenvolv1">
 				
-				<video id="video" src="T--Rio_UFRJ_Brazil--Home_video.mp4" autoplay loop ></video>
+				<img src="T--Rio_UFRJ_Brazil--Home_video.gif" id="video" >
 			</div>
 			<div class="desenvolv2">
 				<section class="conteudodesenvolv"> <h1><strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique odio consectetur quisquam mollitia enim neque dignissimos asperiores delectus hic ut repellendus odit voluptatem, optio perferendis soluta ipsa minima ducimus sunt!</strong> 
