Tirei a cor de fundo da página principal

--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_index.css">
 	</head>
-	<body class="home">
+	<body class="body_index">
 		<div id="load"></div>
 		<script src="T--Rio_UFRJ_myscript.js"></script>
         <header>
