--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -196,7 +196,7 @@
     </main>
     <div>
         <footer>
-            <img id="rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
+            <img id="T--Rio_UFRJ_rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
             
             <div class="center">	Avenida Carlos Chagas Filho, 373
                 Bloco D, Subsolo, Sala SS-11 
