fiz, editei, redimensionei e adicinei as fotos dos rostos no team, tambem troquei a formatação da barra de menu e a cor dela

--- a/T--Rio_UFRJ_team.html
+++ b/T--Rio_UFRJ_team.html
@@ -128,52 +128,52 @@
         <ul class="team">
             <li>
                 <a href="T--Rio_UFRJ_isis2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirIsis()" >
+                    <img src="T--Rio_UFRJ_rostoIsis.png" onmouseover="AbrirIsis()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_vivian2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirVivian()">
+                    <img src="T--Rio_UFRJ_rostoVivian.png" onmouseover="AbrirVivian()">
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_lucasii.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirLucas()" >
+                    <img src="T--Rio_UFRJ_rostoLucas.png" onmouseover="AbrirLucas()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_luacas22.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirLucas2()">
+                    <img src="T--Rio_UFRJ_rostoLucas2.png" onmouseover="AbrirLucas2()">
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_edson2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirEdson()">
+                    <img src="T--Rio_UFRJ_rostoEdson.png" onmouseover="AbrirEdson()">
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_andrelaine2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirAndrelaine()" >
+                    <img src="T--Rio_UFRJ_rostoAndrelaine.png" onmouseover="AbrirAndrelaine()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_juliano2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirJuliano()">
+                    <img src="T--Rio_UFRJ_rostoJuliano.png" onmouseover="AbrirJuliano()">
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_ramon2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirRamon()" >
+                    <img src="T--Rio_UFRJ_rostoRamon.png" onmouseover="AbrirRamon()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_monica2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirMonica()" >
+                    <img src="T--Rio_UFRJ_rostoMonica.png" onmouseover="AbrirMonica()" >
                 </a>
             </li>
             <li>
                 <a href="T--Rio_UFRJ_fabiana2.html" target="janela">
-                    <img src="rosto2.jpg" onmouseover="AbrirFabiana()" >
+                    <img src="T--Rio_UFRJ_rostoFabiana.png" onmouseover="AbrirFabiana()" >
                 </a>
             </li>
         </ul>
