--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -20,7 +20,7 @@
 						<li><a href="T--Rio_UFRJ_index.html"> &nbspHome&nbsp</a></li>
 						<li><a> &nbspProject&nbsp </a>
 							<ul>
-								<li><a href="#">Project Description</a></li>
+								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
 								<li><a href="#">Engineering success</a></li>
 								<li><a href="#">Project Modeling</a></li>
 								<li><a href="#">Proposed Implementation</a></li>
