adicionei mais tres paginas

--- a/T--Rio_UFRJ_projectDescription.html
+++ b/T--Rio_UFRJ_projectDescription.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Team:Rio_UFRJ_Brazil</title>
 
-		<link rel="stylesheet" href="T--Rio_UFRJ_projectDescription.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_index.css">
+        <link rel="stylesheet" href="T--Rio_UFRJ_Description.css">
 	</head>
 	<body class="body_index">
 		<div id="load"></div>
@@ -20,11 +21,11 @@
 						<li><a href="T--Rio_UFRJ_index.html"> &nbspHome&nbsp</a></li>
 						<li><a> &nbspProject&nbsp </a>
 							<ul>
-								<li><a href="#">Project Description</a></li>
-								<li><a href="#">Engineering success</a></li>
-								<li><a href="#">Project Modeling</a></li>
-								<li><a href="#">Proposed Implementation</a></li>
-								<li><a href="#">Proof of concept</a></li>
+								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
+								<li><a href="T--Rio_UFRJ_engineeringSuccess.html">Engineering success</a></li>
+								<li><a href="T--Rio_UFRJ_projectModeling.html">Project Modeling</a></li>
+								<li><a href="T--Rio_UFRJ_proposedImplementation.html">Proposed Implementation</a></li>
+								<li><a href="T--Rio_UFRJ_proofofconcept.html">Proof of concept</a></li>
                             </ul>
                         </li>
 						<li><a >&nbspLabwork&nbsp</a>
@@ -41,6 +42,21 @@
 								<li><a href="#">Entrepreneurship</a></li>
 							</ul>
                         </li>
+						<li><a>&nbspTeam&nbsp</a>
+							<ul>
+								<li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
+								<li><a href="T--Rio_UFRJ_collaboration.html">Collaboration</a></li>
+								<li><a href="#">Partnership</a></li>
+							</ul>
+                        </li>
+						<li><a href="">&nbspParts&nbsp</a>
+							<ul>
+								<li><a href="#">Contribution</a></li>
+								<li><a href="#">Project parts</a></li>
+							</ul>
+                        </li>
+					
+					</ul>
                 
             </div>
             <main class="principal">
