fiz do 0 uma nova pagina para descrever o trabalho de incluisao do codigo, adicionei o caminho dela para a barra de menu. mudei o numero de pessoas do team, troquei cores, concertei bugs no js

--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -52,9 +52,10 @@
 							<ul>
 								<li><a href="#">Contribution</a></li>
 								<li><a href="#">Project parts</a></li>
+								
 							</ul>
                         </li>
-					
+						<li><a href="T--Rio_UFRJ_accessibility.html">&nbspAccessibility&nbsp</a></li>
 					</ul>
 				</nav>
 
