--- a/T--Rio_UFRJ_projectDescription.html
+++ b/T--Rio_UFRJ_projectDescription.html
@@ -55,6 +55,7 @@
 								<li><a href="#">Project parts</a></li>
 							</ul>
                         </li>
+                        <li><a href="T--Rio_UFRJ_accessibility.html">&nbspAccessibility&nbsp</a></li>
 					
 					</ul>
                 
