--- a/T--Rio_UFRJ_accessibility.html
+++ b/T--Rio_UFRJ_accessibility.html
@@ -19,7 +19,7 @@
 					</div>
 					<ul class="menu">		
 						<li><a href="T--Rio_UFRJ_index.html"> &nbspHome&nbsp</a></li>
-						<li><a> &nbspProject&nbsp </a>
+						<li><a class="hvr-icon-hang"> &nbspProject&nbsp </a>
 							<ul>
 								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
 								<li><a href="T--Rio_UFRJ_engineeringSuccess.html">Engineering success</a></li>
