adicionando texto e imagens editadas da forma correta na pagina do times

--- a/T--Rio_UFRJ_andrelaine2.html
+++ b/T--Rio_UFRJ_andrelaine2.html
@@ -2,17 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-        <link rel="stylesheet" href="T--Rio_UFRJ_iframe.css">
 
 	</head>
 	<body>
-        <iframe src="textoAndrelaine.html">
 
-
-		</iframe>
-
-
-        <img src="clickAndrelaine.png">
+        <img src="T--Rio_UFRJ_andrelaineSelecao.png">
 
     </body>
 
