--- a/T--Rio_UFRJ_index.html
+++ b/T--Rio_UFRJ_index.html
@@ -6,7 +6,7 @@
 
 		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_index.css" >
-		<link href="css/hover.css" rel="stylesheet" media="all">
+
 	</head>
 	<body class="body_index">
 		<div id="load"></div>
@@ -23,6 +23,7 @@
 							<ul>
 								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
 								<li><a href="T--Rio_UFRJ_engineeringSuccess.html">Engineering success</a></li>
+								<li><a href="">Design</a></li>
 								<li><a href="#">Project Modeling</a></li>
 								<li><a href="#">Proposed Implementation</a></li>
 								<li><a href="#">Proof of concept</a></li>
@@ -32,7 +33,7 @@
 							<ul>
 								<li><a href="#">Safety</a></li>
 								<li><a href="#">Experiments</a></li>
-								<li><a href="#">Notebook and Protocol</a></li>
+								<li><a href="#">Notebook</a></li>
 								<li><a href="#">Results</a></li>
 							</ul>
                         </li>
@@ -80,6 +81,9 @@
 			<div class="desenvolv1">
 				
 				<img src="T--Rio_UFRJ_Brazil--Home_video.gif" id="video" >
+			</div>
+			<div>
+				<img src="T--Rio_UFRJ_mosquito.gif" id="video">
 			</div>
 			<div class="desenvolv2">
 				<section class="conteudodesenvolv"> <h1><strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique odio consectetur quisquam mollitia enim neque dignissimos asperiores delectus hic ut repellendus odit voluptatem, optio perferendis soluta ipsa minima ducimus sunt!</strong> 
