--- a/T--Rio_UFRJ_isis2.html
+++ b/T--Rio_UFRJ_isis2.html
@@ -6,20 +6,6 @@
 		<title>Team:Rio_UFRJ_Brazil</title>
     </head>
     <body>
-        <ul class="opcaoTexto">
-            <li>
-                <a href="" >
-                    <img src="rosto2.jpg" onmouseover="" onmouseout="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="rosto2.jpg" onmouseover="" onmouseout="">
-                </a>
-            </li>
-
-            <iframe src="textoIsis" frameborder="0">
-
-            </iframe>
+        <img src="T--Rio_UFRJ_isisSelecao.png">
     </body>
 
