--- a/T--Rio_UFRJ_luacas22.html
+++ b/T--Rio_UFRJ_luacas22.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-        <img src="T--Rio_UFRJ_monica.png">
+        <img src="T--Rio_UFRJ_lucasiiSelecao.png">
 
     </body>
 
