--- a/T--Rio_UFRJ_accessibility.html
+++ b/T--Rio_UFRJ_accessibility.html
@@ -19,7 +19,7 @@
 					</div>
 					<ul class="menu">		
 						<li><a href="T--Rio_UFRJ_index.html"> &nbspHome&nbsp</a></li>
-						<li><a class="hvr-icon-hang"> &nbspProject&nbsp </a>
+						<li><a class="seta-baixo"> &nbspProject&nbsp </a>
 							<ul>
 								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
 								<li><a href="T--Rio_UFRJ_engineeringSuccess.html">Engineering success</a></li>
@@ -28,7 +28,7 @@
 								<li><a href="#">Proof of concept</a></li>
                             </ul>
                         </li>
-						<li><a >&nbspLabwork&nbsp</a>
+						<li><a class="seta-baixo">&nbspLabwork&nbsp</a>
 							<ul>
 								<li><a href="#">Safety</a></li>
 								<li><a href="#">Experiments</a></li>
@@ -36,20 +36,20 @@
 								<li><a href="#">Results</a></li>
 							</ul>
                         </li>
-						<li><a> &nbspHuman Practices&nbsp</a>
+						<li><a class="seta-baixo"> &nbspHuman Practices&nbsp</a>
 							<ul>
 								<li><a href="#">Human Practices</a></li>
 								<li><a href="#">Entrepreneurship</a></li>
 							</ul>
                         </li>
-						<li><a>&nbspTeam&nbsp</a>
+						<li><a class="seta-baixo">&nbspTeam&nbsp</a>
 							<ul>
 								<li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
 								<li><a href="T--Rio_UFRJ_collaboration.html">Collaboration</a></li>
 								<li><a href="#">Partnership</a></li>
 							</ul>
                         </li>
-						<li><a href="">&nbspParts&nbsp</a>
+						<li><a class="seta-baixo">&nbspParts&nbsp</a>
 							<ul>
 								<li><a href="#">Contribution</a></li>
 								<li><a href="#">Project parts</a></li>
