conserto de bug

--- a/T--Rio_UFRJ_Brazil--engineeringSuccess.html
+++ b/T--Rio_UFRJ_Brazil--engineeringSuccess.html
@@ -4,14 +4,13 @@
 		<meta charset="UTF-8">
 		<title>Team:Rio_UFRJ_Brazil</title>
 
-		<link rel="stylesheet" href="T--Rio_UFRJ_reset.css">
-		<link rel="stylesheet" href="T--Rio_UFRJ_index.css">
-        <link rel="stylesheet" href="T--Rio_UFRJ_Description.css">
-		<link rel="stylesheet" href="T--Rio_UFRJ_tabela.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--reset.css">
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--index.css" >
+
 	</head>
 	<body class="body_index">
 		<div id="load"></div>
-		<script src="T--Rio_UFRJ_myscript.js"></script>
+		<script src="T--Rio_UFRJ_Brazil--myscript.js"></script>
         <header>
 			<div class="caixa">
 				<nav>
@@ -19,48 +18,65 @@
 						<img id="imglogomenu" src="T--Rio_UFRJ_Brazil--logonav.png">
 					</div>
 					<ul class="menu">		
-						<li><a href="T--Rio_UFRJ_index.html"> &nbspHome&nbsp</a></li>
+						<li><a href="T--Rio_UFRJ_Brazil--index.html"> &nbspHome&nbsp</a></li>
 						<li><a class="seta-baixo"> &nbspProject&nbsp </a>
 							<ul>
-								<li><a href="T--Rio_UFRJ_projectDescription.html">Project Description</a></li>
-								<li><a href="T--Rio_UFRJ_engineeringSuccess.html">Engineering success</a></li>
-								<li><a href="#">Project Modeling</a></li>
-								<li><a href="#">Proposed Implementation</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--projectDescription.html">Project Description</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--engineeringSuccess.html">Engineering success</a></li>
+								<li><a href="#">Design</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--projectModeling.html">Project Modeling</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--proposedImplementation.html">Proposed Implementation</a></li>
 								<li><a href="#">Proof of concept</a></li>
                             </ul>
                         </li>
 						<li><a class="seta-baixo">&nbspLabwork&nbsp</a>
 							<ul>
-								<li><a href="#">Safety</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--safety.html">Safety</a></li>
 								<li><a href="#">Experiments</a></li>
-								<li><a href="#">Notebook and Protocol</a></li>
+								<li><a href="#">Notebook</a></li>
 								<li><a href="#">Results</a></li>
 							</ul>
                         </li>
 						<li><a class="seta-baixo"> &nbspHuman Practices&nbsp</a>
 							<ul>
-								<li><a href="#">Human Practices</a></li>
-								<li><a href="#">Entrepreneurship</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--human.html">Human Practices</a></li>
+								<li><a href="#">Enterpreneurship</a></li>
 							</ul>
                         </li>
 						<li><a class="seta-baixo">&nbspTeam&nbsp</a>
 							<ul>
-								<li><a href="T--Rio_UFRJ_team.html">Attributions</a></li>
-								<li><a href="T--Rio_UFRJ_collaboration.html">Collaboration</a></li>
-								<li><a href="#">Partnership</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--team.html">Attributions</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--collaboration.html">Collaboration</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--Partnership.html">Partnership</a></li>
 							</ul>
                         </li>
 						<li><a class="seta-baixo">&nbspParts&nbsp</a>
 							<ul>
-								<li><a href="#">Contribution</a></li>
-								<li><a href="#">Project parts</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--contribution.html">Contribution</a></li>
+								<li><a href="T--Rio_UFRJ_Brazil--parts.html">Project parts</a></li>
 								
 							</ul>
                         </li>
-						<li><a href="T--Rio_UFRJ_accessibility.html">&nbspAccessibility&nbsp</a></li>
+						<li><a href="T--Rio_UFRJ_Brazil--accessibility.html">&nbspAccessibility&nbsp</a></li>
 					</ul>
-                
-            </div>
+				</nav>
+
+				<div class="social">
+					<ul class="contato">
+						<li>
+							<a href="https://www.facebook.com/osirisrioufrj"><img  src="T--Rio_UFRJ_Brazil--face.png" width="55px" style="padding-left: 3px;"></a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/company/osirisrioufrj/"><img src="T--Rio_UFRJ_Brazil--in.png" width="60px" style="padding-right: 0px;padding-bottom: 3px;"></a>
+						</li>
+						<li>
+							<a href="https://www.instagram.com/osirisrioufrj/"><img  src="T--Rio_UFRJ_Brazil--iconinsta.png" width="52px" style="padding-left: 4px;"></a>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+        </header>
             <main class="principal">
                 <div class="imagemengineering"></div>
                 <div class="textoimagem">
