erro na nomeclatura corrigido

--- a/T--Rio_UFRJ_Brazil--engineeringSuccess.html
+++ b/T--Rio_UFRJ_Brazil--engineeringSuccess.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--reset.css">
 		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--index.css" >
+		<link rel="stylesheet" href="T--Rio_UFRJ_Brazil--tabela">
 
 	</head>
 	<body class="body_index">
@@ -168,7 +169,7 @@
 				</section>
             </main>
                             <footer>
-                                <img id="T--Rio_UFRJ_rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
+                                <img id="T--Rio_UFRJ_Brazil--rodape" src="T--Rio_UFRJ_Brazil--logo_rodape_osirisri-min.png">
                                 
                                 <div class="center">	Avenida Carlos Chagas Filho, 373
                                     Bloco D, Subsolo, Sala SS-11 
